# uv-sample-test-project

./: pyproject.toml
.github/workflows/: blackducksca-workflow.yml
sample-project/: hello.py  pyproject.toml
sample-project2/: main.py  pyproject.toml
